index y js modificados para hacer el tablero dinamico v1

--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ ul ul{
         width:1170px
     }
 }
+
 .row{
     margin-right:-15px;
     margin-left:-15px
@@ -548,13 +549,17 @@ p{
 img{
     vertical-align:middle
 }
+
+
 #checkersContainer{
     width:490px;
     position:relative;
     margin-left:auto;
     margin-right:auto
 }
-#checkersBoard{
+
+
+#board{
     border:5px solid #999;
     width:100%;
     height:100%;
@@ -563,45 +568,51 @@ img{
     margin-top:30px;
     height:490px
 }
-#checkersBoard .checkersSquare.bright{
-    background:-moz-linear-gradient(center top ,#eee,#fff) repeat scroll 0 0 transparent;
-    background:-webkit-gradient(linear,center bottom,center top,from(#fff),to(#eee));
-    background-color:#fff
+
+.board__row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
-#checkersBoard .checkersSquare.dark{
-    background:-moz-linear-gradient(center top ,#222,#333) repeat scroll 0 0 transparent;
-    background:-webkit-gradient(linear,center bottom,center top,from(#333),to(#222));
-    background-color:#000
-}
-#checkersBoard .checkersSquare{
+
+.row__item{
     height:60px;
     width:60px;
     float:left
 }
-#checkersBoard .piece{
-    width:60px;
-    height:60px;
-    position:absolute;
-    left:0;
-    top:0
+
+.board__row .row__item{
+    padding: 2.1rem;
 }
-#checkersBoard .white{
-    background-image:url(PieceGreen.png)
+
+.board__row:nth-child(even) .row__item:nth-child(even){
+    background:-moz-linear-gradient(center top ,#eee,#fff) repeat scroll 0 0 transparent;
+    background-color:#fff
 }
-#checkersBoard .black{
+.board__row:nth-child(odd) .row__item:nth-child(odd){
+    background:-moz-linear-gradient(center top ,#eee,#fff) repeat scroll 0 0 transparent;
+    background-color:#fff
+}
+.board__row:nth-child(odd) .row__item:nth-child(even){
+    background:-moz-linear-gradient(center top ,#222,#333) repeat scroll 0 0 transparent;
+    background-color:#000
+}
+.board__row:nth-child(even) .row__item:nth-child(odd){
+    background:-moz-linear-gradient(center top ,#222,#333) repeat scroll 0 0 transparent;
+    background-color:#000
+}
+
+ .has-red-piece{
     background-image:url(PieceBlue.png)
 }
-#checkersBoard #moveNotAllowed{
-    width:60px;
-    height:60px;
-    position:absolute;
-    display:none;
-    z-index:10
+
+.has-white-piece{
+    background-image:url(PieceGreen.png)
 }
-#checkersBoard #moveNotAllowed img{
-    width:60px;
-    height:60px
-}
+
+
+
 #buttonContainer{
     margin-bottom:10px
 }
