--- a/styles.css
+++ b/styles.css
@@ -552,8 +552,7 @@ img{
 
 
 #checkersContainer{
-    width:490px;
-    position:relative;
+    
     margin-left:auto;
     margin-right:auto
 }
@@ -561,12 +560,15 @@ img{
 
 #board{
     border:5px solid #999;
+    margin-left:auto;
+    margin-right:auto;
     width:100%;
     height:100%;
     position:relative;
     z-index:0;
     margin-top:30px;
-    height:490px
+    height:490px;
+    width:490px;
 }
 
 .board__row {
@@ -579,7 +581,6 @@ img{
 .row__item{
     height:60px;
     width:60px;
-    float:left
 }
 
 .board__row .row__item{
@@ -587,19 +588,15 @@ img{
 }
 
 .board__row:nth-child(even) .row__item:nth-child(even){
-    background:-moz-linear-gradient(center top ,#eee,#fff) repeat scroll 0 0 transparent;
     background-color:#fff
 }
 .board__row:nth-child(odd) .row__item:nth-child(odd){
-    background:-moz-linear-gradient(center top ,#eee,#fff) repeat scroll 0 0 transparent;
     background-color:#fff
 }
 .board__row:nth-child(odd) .row__item:nth-child(even){
-    background:-moz-linear-gradient(center top ,#222,#333) repeat scroll 0 0 transparent;
     background-color:#000
 }
 .board__row:nth-child(even) .row__item:nth-child(odd){
-    background:-moz-linear-gradient(center top ,#222,#333) repeat scroll 0 0 transparent;
     background-color:#000
 }
 
@@ -611,6 +608,11 @@ img{
     background-image:url(PieceGreen.png)
 }
 
+.selected {
+    background-color: #074F7F;
+    -webkit-box-shadow: 0 0 10px 7px #5AADE6;
+    position:relative;
+  }
 
 
 #buttonContainer{
@@ -633,4 +635,15 @@ img{
     text-shadow:0 0 3px #333;
     cursor:pointer;
 }
+
+.turn{
+    font-size:40px;
+    margin-top:80px;
+    padding:10px 25px;
+    vertical-align:middle;
+    font-family:Arial;
+    color:#333;
+}
+
+
 
